# PileBox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTION.md  README.md  gamewidget.cpp  gamewidget.h  gamewidget.ui  helpwindow.cpp  helpwindow.h  helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  setup_vcpkg.bat  startmenu.cpp  startmenu.h  startmenu.ui  storage.h
NinePatch/: NinePatch.cpp  NinePatch.h
box2dWidget/: BoxScene.cpp  BoxScene.h
resources/: gameStyle.qss  resources.qrc
